# opencode

./: .env  .gitignore  .lintstagedrc.js  .snyk  AGENTS.md  DIRECTORY_INTERACTION.md  GEMINI.md  LANGUAGE_SERVER_FIX_STATUS.md  MCP_CONNECTION_FIX.md  MCP_GLOBAL_SETUP_PLAN.md  MCP_USAGE_GUIDE.md  MIGRATE_STORAGE_TO_SQLITE.md  MODELS.md  OPENCODE_BOOTSTRAP_PLAN.md  PROJECT_README.md  PROJECT_SUMMARY.md  PROVIDER_ERROR_SOLUTIONS.md  QWEN.md  README.md  RUBE_MCP_INTEGRATION_INSIGHTS.md  RUBE_TOOLS_REFERENCE.md  SNYK_INTEGRATION.md  Slash-Commands-Guide.md  bootstrap-init.sh  browserbase-rube-integration.md  bunfig.toml  cleanup_project.sh  codeinterpreter-rube-integration.md  composio-rube-integration.md  disk-cleanup-workflow.sh  gemini-rube-integration.md  get-all-mcp-tools.js  get-mcp-tools.js  gmail-rube-integration.md  go.mod  googlecalendar-rube-integration.md  googledrive-rube-integration.md  hooks  install  keybinds.json  (+28 more)
.github/: JULES_QUICKSTART.md  JULES_SETUP.md  jules-config.yml
.husky/: .pre-commit-config.yaml  commit-msg  pre-commit
.opencode/: .env  DEVELOPMENT_GUIDELINES.md  all_mcp_tools.json  config.schema.json  mcp.json  opencode.json
agent/: architect.md  bmad.md  build.md  chains.md  creative.md  debug.md  docs.md  meta.md  monitor.md  plan.md  research.md  security.md  shell-expert.md  specifier.md
command/: analyze-coverage.md  build.md  clean.md  commit.md  component.md  config.md  (+18 more)
sdks/zed/: .gitignore  Cargo.toml  README.md  keymap.json  plugin.json  settings.json
sdks/zed/src/: client.rs  config.rs  lib.rs  protocol.rs  session.rs  ui.rs
(+336 files in other folders)
