[package]
name = "zed-acp"
version = "0.1.0"
edition = "2021"
description = "OpenCode ACP integration for Zed"
authors = ["OpenCode Team"]

[lib]
name = "zed_acp"
crate-type = ["cdylib"]

[dependencies]
zed_extension_api = "0.0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
lru = "0.12"